[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmcp-quickstart"
version = "0.1.0"
description = "FastMCP quickstart echo server example"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "FastMCP Quickstart", email = "noreply@example.com" },
]

# Runtime dependencies; Pin to a minimum version to avoid accidental breakage
dependencies = [
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"

[tool.setuptools]
packages = ["" ]
